# mfx_dispatch

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.am  README  README.md  Toolchain-cross-mingw32-linux.cmake  configure.ac  libmfx.pc.cmake  libmfx.pc.in  libmfx.pc.win.cmake  libmfx.sln  libmfx.vcproj  readme-dispatcher.rtf
.github/workflows/: windows.yml
include/: mfx_critical_section.h  mfx_dispatcher.h  mfx_dxva2_device.h  mfx_exposed_functions_list.h  mfx_library_iterator.h  mfx_win_reg_key.h
mfx/: mfxastructures.h  mfxbrc.h  mfxcamera.h  mfxcommon.h  mfxdefs.h  mfxenc.h  mfxfei.h  mfxfeihevc.h  mfxla.h  mfxmvc.h  mfxpak.h  mfxplugin.h  mfxsc.h  mfxstructures.h  mfxvideo.h
src/: .mfx_dispatcher.cpp.swp  intel_api_factory.h  intel_gfx_api-x64.def  intel_gfx_api-x86.def  main.cpp  mfx_critical_section.cpp  mfx_critical_section.h  mfx_critical_section_linux.cpp  mfx_dispatcher.cpp  mfx_dispatcher.h  mfx_dispatcher_defs.h  mfx_dispatcher_log.cpp  mfx_dispatcher_log.h  mfx_dispatcher_trace.cpp  mfx_driver_store_loader.cpp  mfx_driver_store_loader.h  mfx_dxva2_device.cpp  mfx_dxva2_device.h  mfx_exposed_functions_list.h  mfx_function_table.cpp  mfx_library_iterator.cpp  mfx_library_iterator.h  mfx_library_iterator_linux.cpp  mfx_load_dll.cpp  mfx_load_dll.h  mfx_load_dll_linux.cpp  mfx_load_plugin.cpp  mfx_load_plugin.h  mfx_plugin_cfg_parser.cpp  mfx_plugin_cfg_parser.h  mfx_plugin_hive.cpp  mfx_plugin_hive.h  mfx_plugin_hive_linux.cpp  mfx_va_glue.c  mfx_va_glue.h  mfx_vector.h  mfx_win_reg_key.cpp  mfx_win_reg_key.h  mfxloader.cpp  mfxloader.h
